--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -29,8 +29,16 @@ body {
 .header {
   background-color: var(--add-color);
 }
+.nav {
+  display: flex;
+  align-items: baseline;
+}
 .logo {
+  margin-right: 93px;
+  margin-left: auto;
+
   color: var(--title-text-color);
+
   font-family: Raleway;
   font-style: normal;
   font-weight: 700;
@@ -42,8 +50,22 @@ body {
 .logo-web {
   color: var(--accent-color);
 }
+.site-nav {
+  display: flex;
+}
+.site-nav .item {
+  margin-right: 40px;
+}
+.site-nav .item:last-child {
+  margin-right: 0;
+}
 .site-nav-link {
+  display: block;
+  padding-top: 32px;
+  padding-bottom: 32px;
+
   color: var(--title-text-color);
+
   text-decoration: none;
 }
 .site-nav-link:hover,
@@ -51,11 +73,26 @@ body {
   color: var(--accent-color);
 }
 .site-nav-сurrent {
+  display: block;
+  padding-top: 32px;
+  padding-bottom: 32px;
+
   color: var(--accent-color);
+
   text-decoration: none;
 }
+
+.contact-nav .item + .item {
+  margin-left: 50px;
+}
+.contact-nav .item {
+  padding-top: 32px;
+  padding-bottom: 32px;
+}
+
 .contact-nav-mt {
   color: var(--primary-text-color);
+
   text-decoration: none;
 }
 
@@ -70,8 +107,13 @@ body {
   font-size: 14px;
   line-height: 1.2;
   letter-spacing: 0.02em;
+
   margin: 0;
   padding: 0;
+}
+.contact-nav {
+  display: flex;
+  margin: auto;
 }
 /* main */
 .section {
@@ -79,6 +121,8 @@ body {
 }
 /* Герой */
 .hero {
+  height: 600px;
+
   background-color: var(--bg-color);
 
   text-align: center;
@@ -86,6 +130,7 @@ body {
 .hero-title {
   margin-top: 0;
   margin-bottom: 30;
+  padding-top: 200px;
 
   color: var(--add-color);
 
@@ -97,8 +142,11 @@ body {
   text-transform: uppercase;
 }
 .hero-button {
+  border: none;
+
   background-color: var(--accent-color);
   color: var(--add-color);
+
   font-family: Roboto;
   font-style: normal;
   font-weight: 700;
@@ -106,47 +154,69 @@ body {
   line-height: 1.88;
   align-items: center;
   letter-spacing: 0.06em;
+
   cursor: pointer;
 }
 /* Особливості */
 .container {
+  margin-top: 91px;
+  margin-bottom: 94px;
   margin-left: auto;
   margin-right: auto;
-  width: 1170px;
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 .section-feature {
+  display: flex;
+  margin-top: 0;
+  margin-bottom: 0;
+
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
   line-height: 1.7;
   letter-spacing: 0.03em;
-  margin-top: 0;
-  margin-bottom: 0;
 }
 .section-feature-title {
   color: var(--title-text-color);
+
   font-style: normal;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.1;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+
   margin-top: auto;
   margin-bottom: 10px;
 }
 .section-feature-text {
   margin-top: 0;
   margin-bottom: 0;
+  margin-right: 10px;
 }
 /* Заняття */
+.s-work {
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.work {
+  display: flex;
+}
 .section-title {
   color: var(--title-text-color);
+
   font-style: normal;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.15;
   text-align: center;
   letter-spacing: 0.03em;
+
   margin-top: 0;
   margin-bottom: 50px;
 }
@@ -154,9 +224,21 @@ body {
   margin: 0;
   padding: 0;
 }
+.img {
+  margin-right: 30px;
+}
 /* Команда */
-.section-team {
+.section-color {
   background-color: var(--team-color);
+  margin-top: 114px;
+}
+.section-team {
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
@@ -164,25 +246,41 @@ body {
   text-align: center;
   letter-spacing: 0.03em;
 }
+.img-color {
+  background-color: white;
+}
 .section-team-title {
   color: var(--title-text-color);
+
   font-weight: 500;
   font-size: 16px;
+
   margin-top: 30px;
   margin-bottom: 10px;
 }
+
 /* Футер */
-.footer {
+.footer-color {
   background-color: var(--bg-color);
+}
+.footer {
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
   color: var(--add-color);
 }
 .logo-footer {
   color: var(--add-color);
+
+  font-family: Raleway;
   font-style: normal;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
   letter-spacing: 0.03em;
+
   text-decoration: none;
 }
 .footer-address {
@@ -191,61 +289,109 @@ body {
 }
 .footer-contact-address {
   color: var(--add-color);
+
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
   line-height: 24px;
   letter-spacing: 0.03em;
+
   text-decoration: none;
 }
 .footer-contact-nav-mt {
   color: var(--footer-color);
+
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
   line-height: 24px;
   letter-spacing: 0.03em;
+
   text-decoration: none;
 }
 /* Портфоліо */
 .portfolio {
+  margin-top: 94px;
+  margin-bottom: 94px;
+
   font-family: Roboto;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.88;
   letter-spacing: 0.03em;
+
   margin-left: auto;
   margin-right: auto;
-  width: 1170px;
-  outline: 2px solid tomato;
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 .portfolio-link {
   text-decoration: none;
 }
 .portfolio-title {
+  margin-top: 20px;
+  margin-bottom: 0;
+
+  color: var(--title-text-color);
+
   font-style: normal;
   font-weight: bold;
   font-size: 18px;
   line-height: 36px;
   letter-spacing: 0.06em;
-  color: var(--title-text-color);
 }
 .portfolio-text {
+  margin-top: 4px;
+  margin-bottom: 0;
+
   color: var(--primary-text-color);
 }
+.button {
+  justify-content: center;
+  display: flex;
+  margin: 0 0 50px 0;
+  padding: 0;
+}
 .portfolio-button {
+  margin-right: 8px;
+
   background-color: var(--team-color);
+  border: none;
+
+  font-family: inherit;
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.6;
   text-align: center;
   letter-spacing: 0.03em;
+
   cursor: pointer;
 }
+/*.portfolio-button:last-child {
+  margin-right: 0;
+}*/
 .portfolio-button:hover,
 .portfolio-button:focus {
   background-color: var(--accent-color);
   color: var(--add-color);
+}
+.flex-container {
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-wrap: wrap;
+}
+.flex-element {
+  width: 370px;
+  margin-right: 30px;
+  margin-bottom: 30px;
+}
+.flex-element:nth-child(3n) {
+  margin-right: 0;
+}
+.flex-element:nth-last-child(-n + 3) {
+  margin-bottom: 0;
 }
