--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -7,6 +7,8 @@ html {
 *::before,
 *::after {
   box-sizing: inherit;
+  margin: 0;
+  padding: 0;
 }
 :root {
   --primary-text-color: #757575;
@@ -16,6 +18,12 @@ html {
   --bg-color: #2f303a;
   --team-color: #f5f4fa;
   --footer-color: rgba(255, 255, 255, 0.6);
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
 
 /* Загальна сторінка */
@@ -128,8 +136,7 @@ body {
   text-align: center;
 }
 .hero-title {
-  margin-top: 0;
-  margin-bottom: 30;
+  margin-bottom: 30px;
   padding-top: 200px;
 
   color: var(--add-color);
@@ -143,6 +150,8 @@ body {
 }
 .hero-button {
   border: none;
+  border-radius: 4px;
+  padding: 10px 32px;
 
   background-color: var(--accent-color);
   color: var(--add-color);
@@ -192,6 +201,7 @@ body {
   margin-bottom: 10px;
 }
 .section-feature-text {
+  width: 270px;
   margin-top: 0;
   margin-bottom: 0;
   margin-right: 10px;
@@ -217,7 +227,6 @@ body {
   text-align: center;
   letter-spacing: 0.03em;
 
-  margin-top: 0;
   margin-bottom: 50px;
 }
 .section-work {
@@ -228,9 +237,12 @@ body {
   margin-right: 30px;
 }
 /* Команда */
+
 .section-color {
   background-color: var(--team-color);
   margin-top: 114px;
+  padding-top: 94px;
+  padding-bottom: 94px;
 }
 .section-team {
   width: 1200px;
@@ -246,21 +258,30 @@ body {
   text-align: center;
   letter-spacing: 0.03em;
 }
-.img-color {
+.card-team {
   background-color: white;
+  margin-right: 30px;
+  border-radius: 4px;
+}
+.img-team {
+  margin-bottom: 30px;
+}
+.item-team {
+  margin-bottom: 30px;
 }
 .section-team-title {
+  padding-bottom: 10px;
+
   color: var(--title-text-color);
 
   font-weight: 500;
   font-size: 16px;
-
-  margin-top: 30px;
-  margin-bottom: 10px;
 }
 
 /* Футер */
 .footer-color {
+  padding-top: 60px;
+  padding-bottom: 60px;
   background-color: var(--bg-color);
 }
 .footer {
@@ -284,8 +305,10 @@ body {
   text-decoration: none;
 }
 .footer-address {
-  margin: 0;
-  padding: 0;
+  margin-top: 20px;
+}
+.footer-item {
+  padding-bottom: 9px;
 }
 .footer-contact-address {
   color: var(--add-color);
@@ -327,13 +350,28 @@ body {
   padding-left: 15px;
   padding-right: 15px;
 }
-.portfolio-link {
+.flex-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+.flex-element {
+  width: 370px;
+  margin-right: 30px;
+  margin-bottom: 30px;
+}
+.flex-element:nth-child(3n) {
+  margin-right: 0;
+}
+.flex-element:nth-last-child(-n + 3) {
+  margin-bottom: 0;
+}
+.card-link {
   text-decoration: none;
 }
-.portfolio-title {
-  margin-top: 20px;
-  margin-bottom: 0;
-
+.card-content {
+  padding: 20px 24px;
+}
+.card-title {
   color: var(--title-text-color);
 
   font-style: normal;
@@ -342,9 +380,8 @@ body {
   line-height: 36px;
   letter-spacing: 0.06em;
 }
-.portfolio-text {
+.card-text {
   margin-top: 4px;
-  margin-bottom: 0;
 
   color: var(--primary-text-color);
 }
@@ -355,7 +392,9 @@ body {
   padding: 0;
 }
 .portfolio-button {
+  border-radius: 4px;
   margin-right: 8px;
+  padding: 6px 22px;
 
   background-color: var(--team-color);
   border: none;
@@ -377,21 +416,4 @@ body {
 .portfolio-button:focus {
   background-color: var(--accent-color);
   color: var(--add-color);
-}
-.flex-container {
-  padding: 0;
-  margin: 0;
-  display: flex;
-  flex-wrap: wrap;
-}
-.flex-element {
-  width: 370px;
-  margin-right: 30px;
-  margin-bottom: 30px;
-}
-.flex-element:nth-child(3n) {
-  margin-right: 0;
-}
-.flex-element:nth-last-child(-n + 3) {
-  margin-bottom: 0;
 }
